crates/lang-parse/tests/snapshots/parser__parser_formatted expr string both.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xd76c6bec5de944e9",
        output_hash: "0xda62de8beec540cf",
        tree: (
            span: (
                start: 0,
                end: 49,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 49,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 49,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: String((
                        span: (
                            start: 0,
                            end: 49,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        parts: [
                            Content((
                                span: (
                                    start: 1,
                                    end: 8,
                                ),
                                content: "string ",
                            )),
                            Expression((
                                span: (
                                    start: 36,
                                    end: 37,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                expr: BinaryOperation((
                                    span: (
                                        start: 9,
                                        end: 31,
                                    ),
                                    lhs: SymbolPath((
                                        span: (
                                            start: 9,
                                            end: 19,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([
                                                Whitespace((" ")),
                                            ]),
                                        ),
                                        prefix: None,
                                        parts: [
                                            (
                                                span: (
                                                    start: 9,
                                                    end: 18,
                                                ),
                                                name: "formatted",
                                            ),
                                        ],
                                    )),
                                    op: (
                                        span: (
                                            start: 19,
                                            end: 20,
                                        ),
                                        value: Subtract,
                                    ),
                                    rhs: SymbolPath((
                                        span: (
                                            start: 21,
                                            end: 31,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        prefix: None,
                                        parts: [
                                            (
                                                span: (
                                                    start: 21,
                                                    end: 31,
                                                ),
                                                name: "expression",
                                            ),
                                        ],
                                    )),
                                )),
                            )),
                            Content((
                                span: (
                                    start: 37,
                                    end: 48,
                                ),
                                content: " expression",
                            )),
                        ],
                    )),
                )),
            ),
        ),
    ),
)
---
