crates/lang-parse/tests/snapshots/parser__parser_formatted expr string width.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..47,
            statements: StatementList {
                span: 0..47,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [],
                tail: Some(
                    ExpressionStatement {
                        span: 0..47,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attr: Attributes(
                            [],
                        ),
                        expr: String(
                            FormatString {
                                span: 0..47,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                parts: [
                                    Content(
                                        StringLiteral {
                                            span: 1..8,
                                            content: "string ",
                                        },
                                    ),
                                    Expression(
                                        StringExpression {
                                            span: 34..35,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            expr: BinaryOperation(
                                                BinaryOperation {
                                                    span: 9..31,
                                                    lhs: QualifiedName(
                                                        QualifiedName {
                                                            span: 9..18,
                                                            extras: ItemExtras {
                                                                leading: LeadingExtras(
                                                                    [],
                                                                ),
                                                                trailing: TrailingExtras(
                                                                    [
                                                                        Whitespace(
                                                                            Whitespace(
                                                                                " ",
                                                                            ),
                                                                        ),
                                                                    ],
                                                                ),
                                                            },
                                                            parts: [
                                                                Identifier {
                                                                    span: 9..18,
                                                                    name: "formatted",
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                    op: Spanned {
                                                        span: 19..20,
                                                        value: Subtract,
                                                    },
                                                    rhs: QualifiedName(
                                                        QualifiedName {
                                                            span: 21..31,
                                                            extras: ItemExtras {
                                                                leading: LeadingExtras(
                                                                    [],
                                                                ),
                                                                trailing: TrailingExtras(
                                                                    [],
                                                                ),
                                                            },
                                                            parts: [
                                                                Identifier {
                                                                    span: 21..31,
                                                                    name: "expression",
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                },
                                            ),
                                            specification: StringFormatSpecification {
                                                span: 32..34,
                                                precision: None,
                                                width: Some(
                                                    Ok(
                                                        3,
                                                    ),
                                                ),
                                            },
                                        },
                                    ),
                                    Content(
                                        StringLiteral {
                                            span: 35..46,
                                            content: " expression",
                                        },
                                    ),
                                ],
                            },
                        ),
                    },
                ),
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
