crates/lang-parse/tests/snapshots/parser__parser_function empty args with comment.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x62698606c4cc1399",
        output_hash: "0x5f81e612b7f22aad",
        tree: (
            span: (
                start: 0,
                end: 22,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 22,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Function((
                        span: (
                            start: 0,
                            end: 22,
                        ),
                        keyword_span: (
                            start: 0,
                            end: 2,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        doc: (
                            span: (
                                start: 0,
                                end: 22,
                            ),
                            lines: [],
                        ),
                        attr: ([]),
                        vis: None,
                        id: (
                            span: (
                                start: 3,
                                end: 6,
                            ),
                            name: "foo",
                        ),
                        parameters: (
                            span: (
                                start: 7,
                                end: 17,
                            ),
                            extras: (
                                leading: ([
                                    Comment((
                                        span: (
                                            start: 7,
                                            end: 17,
                                        ),
                                        inner: MultiLine("test"),
                                    )),
                                ]),
                                trailing: ([]),
                            ),
                            parameters: [],
                        ),
                        return_type: None,
                        body: (
                            span: (
                                start: 19,
                                end: 22,
                            ),
                            statements: (
                                span: (
                                    start: 20,
                                    end: 21,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                statements: [],
                                tail: Some((
                                    span: (
                                        start: 20,
                                        end: 21,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    attr: ([]),
                                    expr: Literal((
                                        span: (
                                            start: 20,
                                            end: 21,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 20,
                                                end: 21,
                                            ),
                                            value: 2,
                                            raw: "2",
                                        )),
                                    )),
                                )),
                            ),
                        ),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
