crates/lang-parse/tests/snapshots/parser__parser_function with default.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x8808fc1048f2bdf6",
        output_hash: "0xe9be7685faa1597f",
        tree: (
            span: (
                start: 0,
                end: 34,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 34,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Function((
                        span: (
                            start: 0,
                            end: 34,
                        ),
                        keyword_span: (
                            start: 0,
                            end: 2,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        doc: (
                            span: (
                                start: 0,
                                end: 34,
                            ),
                            lines: [],
                        ),
                        attr: ([]),
                        vis: None,
                        id: (
                            span: (
                                start: 3,
                                end: 6,
                            ),
                            name: "foo",
                        ),
                        parameters: (
                            span: (
                                start: 7,
                                end: 25,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            parameters: [
                                (
                                    span: (
                                        start: 7,
                                        end: 16,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    doc: (
                                        span: (
                                            start: 7,
                                            end: 7,
                                        ),
                                        lines: [],
                                    ),
                                    attr: ([]),
                                    id: (
                                        span: (
                                            start: 7,
                                            end: 8,
                                        ),
                                        name: "a",
                                    ),
                                    ty: Some(Single((
                                        span: (
                                            start: 10,
                                            end: 16,
                                        ),
                                        name: "Length",
                                    ))),
                                    default: None,
                                ),
                                (
                                    span: (
                                        start: 17,
                                        end: 25,
                                    ),
                                    extras: (
                                        leading: ([
                                            Whitespace((" ")),
                                        ]),
                                        trailing: ([]),
                                    ),
                                    doc: (
                                        span: (
                                            start: 18,
                                            end: 18,
                                        ),
                                        lines: [],
                                    ),
                                    attr: ([]),
                                    id: (
                                        span: (
                                            start: 18,
                                            end: 19,
                                        ),
                                        name: "b",
                                    ),
                                    ty: None,
                                    default: Some(Literal((
                                        span: (
                                            start: 22,
                                            end: 25,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Quantity((
                                            span: (
                                                start: 22,
                                                end: 25,
                                            ),
                                            value: 3.0,
                                            raw: "3",
                                            unit: (
                                                span: (
                                                    start: 23,
                                                    end: 25,
                                                ),
                                                name: "mm",
                                            ),
                                        )),
                                    ))),
                                ),
                            ],
                        ),
                        return_type: None,
                        body: (
                            span: (
                                start: 27,
                                end: 34,
                            ),
                            statements: (
                                span: (
                                    start: 28,
                                    end: 33,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                statements: [],
                                tail: Some((
                                    span: (
                                        start: 28,
                                        end: 33,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    attr: ([]),
                                    expr: BinaryOperation((
                                        span: (
                                            start: 28,
                                            end: 33,
                                        ),
                                        lhs: SymbolPath((
                                            span: (
                                                start: 28,
                                                end: 30,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([
                                                    Whitespace((" ")),
                                                ]),
                                            ),
                                            prefix: None,
                                            parts: [
                                                (
                                                    span: (
                                                        start: 28,
                                                        end: 29,
                                                    ),
                                                    name: "b",
                                                ),
                                            ],
                                        )),
                                        op: (
                                            span: (
                                                start: 30,
                                                end: 31,
                                            ),
                                            value: Divide,
                                        ),
                                        rhs: SymbolPath((
                                            span: (
                                                start: 32,
                                                end: 33,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            prefix: None,
                                            parts: [
                                                (
                                                    span: (
                                                        start: 32,
                                                        end: 33,
                                                    ),
                                                    name: "a",
                                                ),
                                            ],
                                        )),
                                    )),
                                )),
                            ),
                        ),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
